[package]
name = "NetFlex"
version = "1.0.0"
edition = "2021"

[dependencies]
pcap = { version = "2", features = ["capture-stream"] }
tokio = { version = "1.25", features = ["full"] }
async-trait = "0.1"
httparse = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pnet = "0.35.0"
dashmap = "6.0.1"
# For handling HTTP requests asynchronously
reqwest = { version = "0.12.5", features = ["json", "blocking", "rustls-tls"] }
# For handling MQTT communication
rumqttc = "0.24"
# For handling CoAP communication
coap-lite = "0.13"